--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,15 +1,17 @@
 
+.container-page{
+  width: auto;
+}
+
+/*
 .row{
-    padding-top: 100px;
-    padding-left: 50px;
-    padding-bottom: 80px;
+  padding-left: 50px;
 }
 
 .tables{
-    padding-top: 100px;
+    padding: 30px;
 }
-
-
+*/
 
 
 
