--- a/project_control/templates/project_control/index.html
+++ b/project_control/templates/project_control/index.html
@@ -2,87 +2,131 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<!-- Message -->
-    <!-- <ul class="messagelist">
-        <li class="success">O cliente “<a href="/admin/task/cliente/2/change/">BARBARA CRISTINA MARTINS DA SILVA</a>” foi alterado com sucesso.</li>
-    </ul> -->
-
-<!-- Content -->
-
-<div class="row">
-    <h2>Projetos em Andamento</h2>
-        <div class="tables">
-            <table id="result_list" class="table table-striped table-bordered dt-responsive nowrap no-footer">
-                <thead>
-                    <tr>
-                        <!-- <th scope="col" class="action-checkbox-column">
-                            <div class="text"><span><input type="checkbox" id="action-toggle"></span></div>
-                            <div class="clear"></div>
-                        </th> -->
-                        <th scope="col" class="sortable column-name">
-                            <div class="text">&nbsp;NOME DO CLIENTE </div>
-                            <div class="clear"></div>
-                        </th>
-                        <th scope="col" class="sortable column-cpf">
-                            <div class="text"> CPF </div>
-                            <div class="clear"></div>
-                        </th>
-    
-                        <th scope="col" class="sortable column-policy">
-                            <div class="text"> NÚMERO DA APOLICE </div>
-                            <div class="clear"></div>
-                        </th>
-                        <th scope="col" class="sortable column-amount_paid">
-                            <div class="text"> VALOR PAGO </div>
-                            <div class="clear"></div>
-                        </th>
-                        <th scope="col" class="sortable column-date">
-                            <div class="text"> Date </div>
-                            <div class="clear"></div>
-                        </th>
-                    </tr>
-                </thead>
-                <tbody>
-                        <th>AAAAAA</th>
-                        <td>BBBBBB</td>
-                        <td>CCCCC</td>
-                        <td><b>DDDDD</b></td>
-                        <td>EEEEE</td>
-                    </tr>
-
-                </tbody>
+        <!-- Content -->
+        <div id="content" class="colMS">
+            <h1>Site administration</h1>
+          <div id="content-main">
+  
+          <div class="app-auth module">
+            <table>
+              <caption>
+                <a href="/admin/auth/" class="section"
+                title="Projects Currently in Progress">PROJETOS EM ANDAMENTO</a>
+              </caption>
+  
+              <tr class="model-group">
+                <th scope="row"><a href="{% url 'lista-docs' %}">Lista de Documentos</a></th>
+                <td><a href="/admin/auth/group/add/" class="addlink">Add</a></td>
+                <td><a href="/admin/auth/group/" class="changelink">Change</a></td>
+              </tr>
+  
+              <tr class="model-user">
+                <th scope="row"><a href="/admin/auth/user/">Status do Projeto</a></th>
+                <td><a href="/admin/auth/user/add/" class="addlink">Add</a></td>
+                <td><a href="/admin/auth/user/" class="changelink">Change</a></td>
+              </tr>
             </table>
+          </div>
+
+          <div class="app-project_control module">
+            <table>
+              <caption>
+                <a href="/admin/project_control/" class="section"
+                  title="Models in the Project_Control application">CONFIGURAÇÃO DE PROJETOS</a>
+              </caption>
+
+              <tr class="model-action">
+                <th scope="row"><a href="/admin/project_control/project/">Novo Projeto</a></th>
+                <td><a href="/admin/project_control/project/add/" class="addlink">Add</a></td>
+                <td><a href="/admin/project_control/project/" class="changelink">Change</a></td>
+              </tr>
+
+              <tr class="model-doctype">
+                <th scope="row"><a href="/admin/project_control/doctype/">Tipos de Documentos</a></th>
+                <td><a href="/admin/project_control/doctype/add/" class="addlink">Add</a></td>
+                <td><a href="/admin/project_control/doctype/" class="changelink">Change</a></td>
+              </tr>
+
+              <tr class="model-doctype">
+                <th scope="row"><a href="/admin/project_control/subject/">Disciplinas</a></th>
+                <td><a href="/admin/project_control/subject/add/" class="addlink">Add</a></td>
+                <td><a href="/admin/project_control/subject/" class="changelink">Change</a></td>
+              </tr>
+              
+            </table>
+            
+          </div>
         </div>
+  
+<div id="content-related">
+    <div class="module" id="recent-actions-module">
+      <h2>Recent actions</h2>
+      <h3>My actions</h3>
+      <ul class="actionlist">
+
+        <li class="addlink">
+          <a href="/admin/project_control/documentmodel/6/change/">Diagrama de Interligação</a>
+          <br>
+          <span class="mini quiet">Document model</span>
+        </li>
+
+        <li class="addlink">
+          <a href="/admin/project_control/documentmodel/5/change/">Planta de Locação</a>
+          <br>
+          <span class="mini quiet">Document model</span>
+        </li>
+
+        <li class="addlink">
+          <a href="/admin/project_control/doctype/10/change/">DE</a>
+          <br>
+          <span class="mini quiet">Doc type</span>
+        </li>
+
+        <li class="deletelink">
+          DE
+          <br>
+          <span class="mini quiet">Pageformat</span>
+        </li>
+
+        <li class="addlink">
+          <a href="/admin/project_control/documentmodel/4/change/">Planta de Locação</a>
+          <br>
+          <span class="mini quiet">Document model</span>
+        </li>
+        <li class="addlink">
+          <a href="/admin/project_control/pageformat/4/change/">DE</a>
+          <br>
+          <span class="mini quiet">Pageformat</span>
+        </li>
+
+        <li class="addlink">
+          <a href="/admin/project_control/documentmodel/3/change/">Fluxograma de Engenharia</a>
+          <br>
+          <span class="mini quiet">Document model</span>
+        </li>
+
+        <li class="addlink">
+          <a href="/admin/project_control/doctype/9/change/">FG</a>
+          <br>
+          <span class="mini quiet">Doc type</span>
+        </li>
+
+        <li class="addlink">
+          <a href="/admin/project_control/documentmodel/2/change/">Critério de Projeto</a>
+          <br>
+          <span class="mini quiet">Document model</span>
+        </li>
+
+        <li class="addlink">
+          <a href="/admin/project_control/documentmodel/1/change/">Memorial Descritivo</a>
+          <br>
+          <span class="mini quiet">Document model</span>
+        </li>
+
+      </ul>
+
     </div>
-
-    <div class="row">
-    <div class="content-box">
-
-                <div class="div-box" id="box1">
-                    <i class="fa fa-facebook"></i>
-                    <ul>
-                        <sctrong><h3 id="h3-color"><a href="">Controle de Projetos</a></h3>
-                    </ul>
-                </div>
-     
-                <div class="div-box" id="box2">
-                    <i class="fa fa-facebook"></i>
-                    <ul>
-                        <sctrong><h3 id="h3-color"><a href="">Novos Projetos</a></h3>
-                    </ul>
-                </div>
-
-                <div class="div-box" id="box3">
-                    <i class="fa fa-facebook"></i>
-                    <ul>
-                        <sctrong><h3 id="h3-color"><a href="">Outras Atividades</a></h3>
-                    </ul>
-                </div>
-        </div>
-    </div>
-</div>   
-</div>
-    
+  </div>
 
 
 {% endblock %}
