--- a/templates/base.html
+++ b/templates/base.html
@@ -1,99 +1,65 @@
 {% load static %}
 
 <!DOCTYPE html>
-<html lang="en">
-<!--<html lang="pt-br">-->
-  
-  <title>{% block title %}{{title_status}}{% endblock %}</title>
+
+<html lang="en-us" dir="ltr">
+
 <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    
-    <link rel="stylesheet" type="text/css" href="{% static 'css/reset.css' %}">
-
-    <link rel="stylesheet" href="{% static 'css/reset.css' %}">
-    <link rel="stylesheet" href="{% static 'css/main.css' %}">
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/styles-coin.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/styles-games.css' %}">
+  <title>Site administration | Django site admin</title>
+  <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0">
+  <meta name="robots" content="NONE,NOARCHIVE">
+  <link rel="stylesheet" type="text/css" href="/static/admin/css/base.css">
+  <link rel="stylesheet" type="text/css" href="/static/admin/css/nav_sidebar.css">
+  <link rel="stylesheet" type="text/css" href="/static/admin/css/dashboard.css">
+  <link rel="stylesheet" type="text/css" href="/static/admin/css/responsive.css">
 
 </head>
 
-<body class="app-task model-cliente change-list" data-admin-utc-offset="-10800">
+{% if stauts_body == 'page-home' %}
+<body class=" dashboard" data-admin-utc-offset="0">
+{% else %}
+<body class=" app-project_control model-documentmodel change-list" data-admin-utc-offset="0">
+{% endif %}
 
-  <!--==========================
-    Header
-  ============================-->
-  <header class="site-header">
-    <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
-      <div class="container">
-        <a class="navbar-brand mr-4" href="/"><i class="fas fa-th"></i></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarToggle">
-          <div class="navbar-nav mr-auto">
-            {% if title_status == 'Home | xxx' or title_status == 'Upload | xxx' or title_status == 'Login | xxx'%}
-              <a class="nav-item nav-link" href="/home_ncr">Home</a>
-            {% elif title_status == 'COINS' %}
-              <a class="nav-item nav-link" href="/index_coin">Home</a>
-            {% elif title_status == 'HangmanGame' %}
-              <a class="nav-item nav-link" href="/index_game">Home</a>
-            {% else %}
-              <a class="nav-item nav-link" href="/">Home</a>
-            {% endif %}
-          </div>
+  <!-- Container -->
+  <div id="container">
 
-          <div class="navbar-nav">
-            <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
-            <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
-          </div>
-        </div>
+    <!-- Header -->
+    <div id="header">
+      <div id="branding">
+        <h1 id="site-name"><a href="/">Project Administration</a></h1>
       </div>
-    </nav>
-  </header>
-
-<!--==========================
-  INTO SITE
-============================-->
-
-  {% block content %}
-  
-  {% endblock %}
-
-</div>  
-</div>  
-<footer>
-  <div class="foot-foot">
-    <div class="footer-aling1">
-      <p>Copyright © 2021-2021 A.M.O. All rights reserved.</p>
+      <div id="user-tools">
+        Welcome,
+        <strong>admin</strong>.
+        <a href="/">Home</a> /
+        <a href="/admin/">Admin Access</a> /
+        <a href="{% url 'logout' %}">Log out</a>
+      </div>
     </div>
-    <div class="footer-aling2">
-      Beta-Version 1.0.1
-    </div>
-  </div>  
-</footer>
 
-  <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    
-    <script src="{% static 'js/scripts.js' %}"></script>
-    <script src="{% static 'js/script-coin.js' %}"></script>
+      {% block content %}
 
-    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-    <script type="text/javascript">
-      google.charts.load('current', {'packages':['corechart']});
-      google.charts.setOnLoadCallback(drawChart);
-    </script>
+      {% endblock %}
+
 
 </body>
+
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+<!--
+<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+-->
+
+<script src="/static/admin/js/nav_sidebar.js" defer></script>
+<script src="/admin/jsi18n/"></script>
+
+<script src="{% static 'js/scripts.js' %}"></script>
+<script src="{% static 'js/script-coin.js' %}"></script>
+
+
 </html>
