--- a/project_control/templates/project_control/editar-projetos.html
+++ b/project_control/templates/project_control/editar-projetos.html
@@ -63,8 +63,7 @@
 <div class="submit-row">
 
     <input type="submit" value="Save" class="default" name="_save">
-    <p class="deletelink-box"><a href="/admin/project_control/project/2/delete/"
-            class="deletelink">Delete</a></p>
+    <p class="deletelink-box"><a href="del-proj/{{Projects.id}}" class="deletelink">Delete</a></p>
 
 </div>
 </div>
