--- a/project_control/templates/project_control/pre-deleta-projeto.html
+++ b/project_control/templates/project_control/pre-deleta-projeto.html
@@ -16,17 +16,19 @@
         <h2>Objects</h2>
         <ul>
         {% csrf_token %}
-        {% for i in items %}
-            <li>Projects: <a href="/admin/project_control/project/2/change/">{{Projects.i.project_name}}{{i}}</a></li>
-        {% endfor %}
+        {% for item in ProjRead %}
+            <li>Projects: <a href="Edit_Proj/{{item.0}}">{{item.1}}</a></li>
+
+
+
+        <form action="del-proj/{{item.0}}" method="post"><input type="hidden" name="csrfmiddlewaretoken" value="">
+            {% endfor %}
         </ul>
 
-
-        <form method="post"><input type="hidden" name="csrfmiddlewaretoken" value="hKjfTe4k9h6TC2uyfV08kRDyLThPSuQNQE9qeHWBG5clNnQmO2AIdg59enyCoQkZ">
-    <div>
+            <div>
         <input type="hidden" name="post" value="yes">
     
-    
+      
         <input type="submit" value="Yes, I’m sure">
         <a href="{% url 'lista-proj' %}" class="button cancel-link">No, take me back</a>
     </div>
