--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
     <!-- Header -->
     <div id="header">
       <div id="branding">
-        <h1 id="site-name"><a href="/">Project Administration</a></h1>
+        <h1 id="site-name"><a href="/">Projects Administration</a></h1>
       </div>
       <div id="user-tools">
         Welcome,
