--- a/project_control/templates/project_control/lista-de-projetos.html
+++ b/project_control/templates/project_control/lista-de-projetos.html
@@ -73,7 +73,7 @@
                 <tr>
                   <td class="action-checkbox"><input type="checkbox" name="_selected_action" value="{{proj.id}}"
                       class="action-select"></td>  <!--nowrap: tirar quebra de texto-->
-                  <th class="field-documment_name nowrap"><a href="Edit_Proj/{{proj.id}}">{{proj.project_name}}</a></th>
+                  <th class="field-documment_name nowrap"><a href="/List_Docs/{{proj.id}}">{{proj.project_name}}</a></th>
                   <td class="field-doc_code nowrap">{{proj.company}}</td>
                   <td class="field-format_doc nowrap" >{{proj.code}}</td>
                   <td class="field-doc_type_page nowrap">{{proj.comments}}</td>
