--- a/project_control/templates/project_control/lista-de-projetos.html
+++ b/project_control/templates/project_control/lista-de-projetos.html
@@ -29,7 +29,7 @@
     <div class="module" id="changelist">
       <div class="changelist-form-container">
          <form action="{% url 'pre-del-proj' %}" method="POST">
-          <!-- <input type="hidden" name="csrfmiddlewaretoken" value="{{token}}"> -->
+          <input type="hidden" name="csrfmiddlewaretoken" value="TrZq1xVTK4DlfhkzzIvONc3Ts6xZLlocHA6snRUA3DBaxZStSnCrPYldau5V2ywc">
           <div class="actions">
             <label>Action:
               <select name="action" required>
