--- a/project_control/templates/project_control/modelos-de-documentos.html
+++ b/project_control/templates/project_control/modelos-de-documentos.html
@@ -7,7 +7,7 @@
 
   <!-- Content -->
   <div id="content" class="">
-    <h1>Lista de Documentos</h1>
+    <h1>Lista de Documentos Padrão</h1>
     <div id="content-main">
 
       <ul class="object-tools">
