--- a/project_control/templates/project_control/index.html
+++ b/project_control/templates/project_control/index.html
@@ -4,7 +4,7 @@
 
 <!-- Content -->
 <div id="content" class="colMS">
-    <h1>Site administration</h1>
+    <h1>Project Settings</h1>
   <div id="content-main">
 
   <div class="app-auth module">
@@ -47,9 +47,15 @@
       </tr>
 
       <tr class="model-doctype">
-        <th scope="row"><a href="admin/project_control/documentmodel/">Tipos de Documentos</a></th>
+        <th scope="row"><a href="/admin/project_control/documentmodel/">Modelo de Documento</a></th>
         <td><a href="#" class="changelink">Notes</a></td>
         <td><a href="/admin/project_control/documentmodel/add/" class="addlink">Add</a></td>
+      </tr>
+      
+      <tr class="model-doctype">
+        <th scope="row"><a href="/admin/project_control/doctype/">Tipos de Documentos</a></th>
+        <td><a href="#" class="changelink">Notes</a></td>
+        <td><a href="/admin/project_control/doctype/add/" class="addlink">Add</a></td>
       </tr>
 
       <tr class="model-doctype">
