--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
     <!-- Header -->
     <div id="header">
       <div id="branding">
-        <h1 id="site-name"><a href="/">Projects Administration</a></h1>
+        <h1 id="site-name"><a href="/">Projects Control</a></h1>
       </div>
       <div id="user-tools">
         Welcome,
@@ -95,11 +95,17 @@
         </tr>
   
         <tr class="model-doctype">
-          <th scope="row"><a href="admin/project_control/documentmodel/">Tipos de Documentos</a></th>
+          <th scope="row"><a href="/admin/project_control/documentmodel/">Modelo de Documento</a></th>
           <td><a href="#" class="changelink">Notes</a></td>
           <td><a href="/admin/project_control/documentmodel/add/" class="addlink">Add</a></td>
         </tr>
-  
+        
+        <tr class="model-doctype">
+          <th scope="row"><a href="/admin/project_control/doctype/">Tipos de Documentos</a></th>
+          <td><a href="#" class="changelink">Notes</a></td>
+          <td><a href="/admin/project_control/doctype/add/" class="addlink">Add</a></td>
+        </tr>
+
         <tr class="model-doctype">
           <th scope="row"><a href="/admin/project_control/subject/">Disciplinas</a></th>
           <td><a href="#" class="changelink">Notes</a></td>
