--- a/project_control/templates/project_control/lista-de-documentos.html
+++ b/project_control/templates/project_control/lista-de-documentos.html
@@ -44,13 +44,12 @@
                       <div class="text"><span><input type="checkbox" id="action-toggle"></span></div>
                       <div class="clear"></div>
                     </th>
-
-                    <th scope="col" class="sortable column-format_doc">
-                      <div class="text"><a href="?o=3">NOME BASE DO DOCUMENTO</a></div>
-                      <div class="clear"></div>
-                    </th>
                     <th scope="col" class="sortable column-doc_type_page">
                       <div class="text"><a href="?o=4">NOME DO DOCUMENTO</a></div>
+                      <div class="clear"></div>
+                    </th>
+                    <th scope="col" class="sortable column-format_doc">
+                      <div class="text"><a href="?o=3">TIPO DE DOCUMENTO</a></div>
                       <div class="clear"></div>
                     </th>
                     <th scope="col" class="sortable column-doc_type_page">
@@ -81,8 +80,8 @@
                   <tr>
                     <td class="action-checkbox"><input type="checkbox" name="_selected_action" value="6"
                         class="action-select"></td>  <!--nowrap: tirar quebra de texto-->
-                    <td class="field-doc_name nowrap"><a href="/admin/project_control/ldproj/{{doc.id}}/change/">{{doc.doc_name_pattern}}</td>
                     <td class="field-format_doc nowrap" >{{doc.doc_name}}</td>
+                    <td class="field-doc_name nowrap"><a href="/admin/project_control/ldproj/{{doc.id}}/change/">{{doc.type_doc}}</td>
                     <td class="field-doc_number nowrap">{{doc.doc_number}}</td>
                     <td class="field-subject_name nowrap">{{doc.subject_name}}</td>
                     <th class="field-proj_name nowrap">{{doc.proj_name}}</th>
